tests/symbol/symbol.exp
Error: symbol.js:4
  4: var WAT = Symbol('foo', 'bar'); // Error - unused argument
                             ^^^^^ unused function argument. No more than 1 argument is expected by
 73:   static (value?:any): Symbol;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:73


Found 1 error
